--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
-   "dependencies": {
+  "dependencies": {
     "next": "15.3.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.1",
-    "react-dom": "^19.0.1"
+    "react-dom": "^19.0.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
