--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.1",
     "react-dom": "^19.0.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "lucide-react": "^0.469.0"  
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
